Bug 410488 - regression: tabs have accelerators
Summary: regression: tabs have accelerators
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 19.07.80
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 410660 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-08-01 16:12 UTC by ct
Modified: 2019-08-07 08:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ct 2019-08-01 16:12:06 UTC
SUMMARY
In 19.07.80 the tabs on the tabbar have accelerators. This makes it impossible to send certain ALT key sequences to apps. The accelerators appear to be generated dynamically and vary depending on the tab name. Holding the ALT key reveals the underlines on the tabs. This issue does not appear in 19.04.3.

STEPS TO REPRODUCE
1. start konsole
2. create several new tabs
3. press and hold ALT key to reveal accelerator underlines in tabs

OBSERVED RESULT
Tabs have accelerators. Pressing those ALT key sequences switches tabs instead of sending them to the application running in the current tab.

EXPECTED RESULT
Tabs should not have accelerators. All ALT key sequences should be sent to the app running in the current tab.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed 20190730
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0

ADDITIONAL INFORMATION
This problem appeared in 19.07.80; 19.04.3 is fine.
Comment 1 Kurt Hindenburg 2019-08-04 14:24:43 UTC
Yes, a regression from the new tab/split handling - thanks for the report
Comment 2 Kurt Hindenburg 2019-08-04 19:26:26 UTC
I think all this needs is " KAcceleratorManager::setNoAccel(this);" in the DetachableTabBar::DetachableTabBar()
Comment 3 Kurt Hindenburg 2019-08-05 13:44:16 UTC
Git commit 841397f3b0a73eca4c60bdec24ebee6c8d32204e by Kurt Hindenburg.
Committed on 05/08/2019 at 13:40.
Pushed by hindenburg into branch 'master'.

Remove accelerators from tabs when pressing ALT

Disable creating automatic mnemonic keys via QAbstractButton.
FIXED-IN: 19.08

M  +3    -0    src/DetachableTabBar.cpp

https://invent.kde.org/kde/konsole/commit/841397f3b0a73eca4c60bdec24ebee6c8d32204e
Comment 4 Kurt Hindenburg 2019-08-05 13:44:20 UTC
Git commit 841397f3b0a73eca4c60bdec24ebee6c8d32204e by Kurt Hindenburg.
Committed on 05/08/2019 at 13:40.
Pushed by scmsync into branch 'master'.

Remove accelerators from tabs when pressing ALT

Disable creating automatic mnemonic keys via QAbstractButton.
FIXED-IN: 19.08

M  +3    -0    src/DetachableTabBar.cpp

https://commits.kde.org/konsole/841397f3b0a73eca4c60bdec24ebee6c8d32204e
Comment 5 Christoph Feck 2019-08-05 17:37:14 UTC
Please commit to Applications/19.08 branch, if you want fixes to appear in version 19.08.
Comment 6 Kurt Hindenburg 2019-08-06 00:19:33 UTC
Yep, I have 2 commits to backport shortly
Comment 7 Kurt Hindenburg 2019-08-06 00:24:34 UTC
Git commit b23a7c2e4dccb33ca9024a0592a9192b15ae6976 by Kurt Hindenburg.
Committed on 06/08/2019 at 00:22.
Pushed by hindenburg into branch 'Applications/19.08'.

Remove accelerators from tabs when pressing ALT

Disable creating automatic mnemonic keys via QAbstractButton.
FIXED-IN: 19.08
(cherry picked from commit 841397f3b0a73eca4c60bdec24ebee6c8d32204e)

M  +3    -0    src/DetachableTabBar.cpp

https://invent.kde.org/kde/konsole/commit/b23a7c2e4dccb33ca9024a0592a9192b15ae6976
Comment 8 Kurt Hindenburg 2019-08-06 00:24:40 UTC
Git commit b23a7c2e4dccb33ca9024a0592a9192b15ae6976 by Kurt Hindenburg.
Committed on 06/08/2019 at 00:22.
Pushed by scmsync into branch 'Applications/19.08'.

Remove accelerators from tabs when pressing ALT

Disable creating automatic mnemonic keys via QAbstractButton.
FIXED-IN: 19.08
(cherry picked from commit 841397f3b0a73eca4c60bdec24ebee6c8d32204e)

M  +3    -0    src/DetachableTabBar.cpp

https://commits.kde.org/konsole/b23a7c2e4dccb33ca9024a0592a9192b15ae6976
Comment 9 Wolfgang Bauer 2019-08-06 20:18:58 UTC
*** Bug 410660 has been marked as a duplicate of this bug. ***
Comment 10 Jan-Matthias Braun 2019-08-07 08:20:54 UTC
Thanks for the fix! My life got immediately improved! :-)