Remove accelerators from tabs when pressing ALT

Disable creating automatic mnemonic keys via QAbstractButton.

BUG: 410488
FIXED-IN: 19.08
(cherry picked from commit 841397f3b0a73eca4c60bdec24ebee6c8d32204e)